@@ -1,6 +1,5 @@
 package ti4.autocomplete;
 
-import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -20,39 +19,32 @@ import net.dv8tion.jda.api.events.interaction.command.CommandAutoCompleteInterac
 import net.dv8tion.jda.api.interactions.commands.Command;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import org.apache.commons.lang3.StringUtils;
+import org.jetbrains.annotations.NotNull;
 import ti4.AsyncTI4DiscordBot;
-import ti4.commands.franken.StartFrankenDraft.FrankenDraftMode;
-import ti4.commands.game.Undo;
-import ti4.commands.map.Preset;
-import ti4.commands.milty.ForcePick;
-import ti4.commands.player.ChangeUnitDecal;
-import ti4.commands.statistics.GameStats.GameStatistics;
-import ti4.commands.statistics.PlayerStats;
-import ti4.commands.uncategorized.ServerPromote;
-import ti4.generator.Mapper;
-import ti4.generator.TileHelper;
+import ti4.commands2.CommandHelper;
+import ti4.commands2.uncategorized.ServerPromoteCommand;
 import ti4.helpers.Constants;
 import ti4.helpers.FoWHelper;
-import ti4.helpers.GlobalSettings;
 import ti4.helpers.Helper;
-import ti4.helpers.Storage;
-import ti4.listeners.SlashCommandListener;
+import ti4.image.Mapper;
+import ti4.image.TileHelper;
 import ti4.map.Game;
-import ti4.map.GameManager;
 import ti4.map.Player;
+import ti4.map.manage.GameManager;
+import ti4.map.manage.ManagedGame;
 import ti4.message.BotLogger;
 import ti4.model.AbilityModel;
 import ti4.model.BorderAnomalyModel;
 import ti4.model.DeckModel;
 import ti4.model.EmbeddableModel;
 import ti4.model.ExploreModel;
-import ti4.model.FactionModel;
 import ti4.model.MapTemplateModel;
 import ti4.model.ModelInterface;
 import ti4.model.PlanetTypeModel;
 import ti4.model.PromissoryNoteModel;
 import ti4.model.PublicObjectiveModel;
 import ti4.model.RelicModel;
+import ti4.model.SecretObjectiveModel;
 import ti4.model.ShipPositionModel;
 import ti4.model.Source;
 import ti4.model.Source.ComponentSource;
@@ -61,45 +53,62 @@ import ti4.model.TechSpecialtyModel;
 import ti4.model.TechnologyModel;
 import ti4.model.UnitModel;
 import ti4.model.WormholeModel;
+import ti4.service.UnitDecalService;
+import ti4.service.franken.FrankenDraftMode;
+import ti4.service.game.GameNameService;
+import ti4.service.game.GameUndoNameService;
+import ti4.service.map.MapPresetService;
+import ti4.service.statistics.PlayerStatTypes;
+import ti4.service.statistics.game.GameStatTypes;
+import ti4.settings.GlobalSettings;
 
 public class AutoCompleteProvider {
 
-    public static void autoCompleteListener(CommandAutoCompleteInteractionEvent event) {
-        // List<OptionMapping> allOptions = event.getOptions();
-        //String fullCommandName = event.getFullCommandName();
+    public static void handleAutoCompleteEvent(CommandAutoCompleteInteractionEvent event) {
+        try {
+            resolveAutoCompleteEvent(event);
+        } catch (Exception e) {
+            BotLogger.log("Error in handleAutoCompleteEvent", e);
+        }
+    }
+
+    private static void resolveAutoCompleteEvent(CommandAutoCompleteInteractionEvent event) {
         String commandName = event.getName();
-        //String subCommandGroupName = event.getSubcommandGroup();
         String subCommandName = event.getSubcommandName();
         String optionName = event.getFocusedOption().getName();
 
-        //boolean showAllChoicesInGame = false;
-        //OptionMapping factionOrColorOption = event.getOption(Constants.FACTION_COLOR);
-        //if (factionOrColorOption != null) showAllChoicesInGame = true;
-
-        String userID = event.getUser().getId();
-        SlashCommandListener.setActiveGame(event.getMessageChannel(), userID, event.getName(), event.getSubcommandName());
-        Game game = GameManager.getInstance().getUserActiveGame(userID);
-        Player player = null;
-        if (game != null) {
-            player = game.getPlayer(userID);
-            player = Helper.getGamePlayer(game, player, event, null);
+        if (subCommandName != null) {
+            switch (commandName) {
+                case Constants.DEVELOPER -> resolveDeveloperCommandAutoComplete(event, subCommandName, optionName);
+                case Constants.SEARCH -> resolveSearchCommandAutoComplete(event, subCommandName, optionName);
+                case Constants.FRANKEN -> resolveFrankenAutoComplete(event, subCommandName, optionName);
+            }
+            if (event.isAcknowledged()) return;
         }
 
-        // VERY SPECIFIC HANDLING OF OPTIONS
-        switch (commandName) {
-            case Constants.DEVELOPER -> resolveDeveloperCommandAutoComplete(event, subCommandName, optionName);
-            case Constants.SEARCH -> resolveSearchCommandAutoComplete(event, subCommandName, optionName);
-            case Constants.CARDS_AC -> resolveActionCardAutoComplete(event, subCommandName, optionName, game);
-            case Constants.FRANKEN -> resolveFrankenAutoComplete(event, subCommandName, optionName, game);
-            case Constants.MAP -> resolveMapAutoComplete(event, subCommandName, optionName, game);
-            case Constants.EVENT -> resolveEventAutoComplete(event, subCommandName, optionName, game, player);
-            case Constants.EXPLORE -> resolveExploreAutoComplete(event, subCommandName, optionName, game);
+        String gameName = GameNameService.getGameNameFromChannel(event);
+        if (GameManager.isValid(gameName) && subCommandName != null) {
+            Game game = GameManager.getManagedGame(gameName).getGame();
+            switch (commandName) {
+                case Constants.MAP -> resolveMapAutoComplete(event, subCommandName, optionName, game);
+                case Constants.CARDS_AC -> resolveActionCardDiscardAutoComplete(event, subCommandName, optionName, game);
+                case Constants.EXPLORE -> resolveExploreAutoComplete(event, subCommandName, optionName, game);
+                case Constants.STATUS -> resolveStatusAutoComplete(event, subCommandName, optionName, game);
+                case Constants.AGENDA -> resolveAgendaAutoComplete(event, subCommandName, optionName, game);
+                case Constants.EVENT -> resolveEventAutoComplete(event, subCommandName, optionName, game);
+                case Constants.CARDS_SO -> resolveSecretObjectiveAutoComplete(event, subCommandName, optionName, game);
+            }
+            if (event.isAcknowledged()) return;
         }
-
-        // DON'T APPLY GENERIC HANDLING IF SPECIFIC HANDLING WAS APPLIED
-        if (event.isAcknowledged()) return;
 
         // GENERIC HANDLING OF OPTIONS
+        handleOptions(event, optionName, subCommandName, gameName);
+        if (!event.isAcknowledged()) {
+            event.replyChoices(Collections.emptyList()).queue();
+        }
+    }
+
+    private static void handleOptions(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String optionName, String subcommandName, String gameName) {
         switch (optionName) {
             case Constants.COLOR -> {
                 String enteredValue = event.getFocusedOption().getValue();
@@ -111,49 +120,8 @@ public class AutoCompleteProvider {
                 event.replyChoices(options).queue();
             }
             case Constants.FACTION, Constants.FACTION2, Constants.FACTION3, Constants.FACTION4, Constants.FACTION5, Constants.FACTION6 -> {
-                String enteredValue = event.getFocusedOption().getValue();
-                List<FactionModel> factions = Mapper.getFactions();
-                List<Command.Choice> options;
-                options = factions.stream()
-                    .filter(faction -> faction.search(enteredValue))
-                    .limit(25)
-                    .map(faction -> new Command.Choice(faction.getAutoCompleteName(), faction.getAlias()))
-                    .collect(Collectors.toList());
+                var options = searchModels(event, Mapper.getFactions(), null);
                 event.replyChoices(options).queue();
-            }
-            case Constants.FACTION_COLOR, Constants.FACTION_COLOR_1, Constants.FACTION_COLOR_2 -> {
-                if (game == null) {
-                    event.replyChoiceStrings("No game found in this channel").queue();
-                    break;
-                }
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                if (game.isFowMode()) {
-                    List<String> factionColors = new ArrayList<>(Mapper.getFactionIDs());
-                    factionColors.addAll(Mapper.getColorNames());
-
-                    List<String> factionColorsRetain = new ArrayList<>();
-                    boolean privateGame = FoWHelper.isPrivateGame(game, null, event.getChannel());
-                    for (Player player_ : game.getPlayers().values()) {
-                        if (!privateGame) {
-                            factionColorsRetain.add(player_.getFaction());
-                        }
-                        factionColorsRetain.add(player_.getColor());
-                    }
-                    factionColors.retainAll(factionColorsRetain);
-                    List<Command.Choice> options = factionColors.stream()
-                        .filter(token -> token.contains(enteredValue))
-                        .limit(25)
-                        .map(token -> new Command.Choice(token, token))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                } else {
-                    List<Command.Choice> options = game.getPlayers().values().stream()
-                        .filter(p -> p.getAutoCompleteRepresentation().toLowerCase().contains(enteredValue))
-                        .limit(25)
-                        .map(p -> new Command.Choice(p.getAutoCompleteRepresentation(), p.getColor()))
-                        .toList();
-                    event.replyChoices(options).queue();
-                }
             }
             case Constants.HUE -> {
                 String enteredValue = Objects.toString(event.getFocusedOption().getValue(), "").toLowerCase();
@@ -161,10 +129,10 @@ public class AutoCompleteProvider {
                     {
                         put("RED", "Reds");
                         put("GRAY", "Grays");
-                        put("GRAY", "Greys");
-                        put("GRAY", "Blacks");
+                        //put("GRAY", "Greys");// TODO duplicate keys
+                        //put("GRAY", "Blacks");
                         put("ORANGE", "Oranges");
-                        put("ORANGE", "Browns");
+                        //put("ORANGE", "Browns");
                         put("YELLOW", "Yellows");
                         put("GREEN", "Greens");
                         put("BLUE", "Blues");
@@ -203,11 +171,7 @@ public class AutoCompleteProvider {
             case Constants.CC_USE -> {
                 String enteredValue = event.getFocusedOption().getValue();
                 List<String> values = Arrays.asList("t/tactics", "r/retreat/reinforcements", "no");
-                List<Command.Choice> options = values.stream()
-                    .filter(token -> token.contains(enteredValue))
-                    .limit(25)
-                    .map(token -> new Command.Choice(token, token))
-                    .collect(Collectors.toList());
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.TOKEN -> {
@@ -219,53 +183,21 @@ public class AutoCompleteProvider {
                         return str;
                     })
                     .toList();
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                List<Command.Choice> options = tokenNames.stream()
-                    .filter(token -> token.toLowerCase().contains(enteredValue))
-                    .limit(25)
-                    .map(token -> new Command.Choice(token, token))
-                    .collect(Collectors.toList());
+                String enteredValue = event.getFocusedOption().getValue();
+                List<Command.Choice> options = mapTo25ChoicesThatContain(tokenNames, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.DISPLAY_TYPE -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("all", "map", "stats", "split", "landscape",
+                var values = List.of("all", "map", "stats", "split", "landscape",
                     "wormholes", "anomalies", "legendaries", "empties", "aetherstream", "space_cannon_offense",
-                    "traits", "technology_specialties", "attachments", "shipless",
-                    "none")
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
-                event.replyChoices(options).queue();
-            }
-
-            case Constants.RELIC -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-
-                List<String> tableRelics = new ArrayList<>();
-                if (game != null) {
-                    // for (Player player_ : game.getPlayers().values()) {
-                    //     List<String> playerRelics = player_.getRelics();
-                    //     tableRelics.addAll(playerRelics);
-                    // }
-                    List<String> relicDeck = Mapper.getDecks().get(game.getRelicDeckID()).getNewShuffledDeck();
-                    tableRelics.addAll(relicDeck);
-                    Collections.shuffle(tableRelics);
-                }
-
-                List<Command.Choice> options = tableRelics.stream()
-                    .filter(value -> value.toLowerCase().contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
-
+                    "traits", "technology_specialties", "attachments", "shipless", "googly", "none");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.RELIC_ALL -> {
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
                 Map<String, RelicModel> relics = Mapper.getRelics();
-
                 List<Command.Choice> options = relics.entrySet().stream()
                     .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue))
                     .limit(25)
@@ -292,38 +224,6 @@ public class AutoCompleteProvider {
                     .map(value -> new Command.Choice(value.getValue(), value.getKey()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
-            }
-            case Constants.AGENDA_ID -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                if (subCommandName != null) {
-                    switch (subCommandName) {
-                        case Constants.REVEAL_SPECIFIC -> {
-                            List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
-                                .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue) || value.getValue().getAlias().toLowerCase().contains(enteredValue))
-                                .limit(25)
-                                .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
-                                .collect(Collectors.toList());
-                            event.replyChoices(options).queue();
-                        }
-                        case Constants.DISCARD_SPECIFIC_AGENDA -> {
-                            List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
-                                .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue) || value.getValue().getAlias().toLowerCase().contains(enteredValue))
-                                .limit(25)
-                                .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
-                                .collect(Collectors.toList());
-                            event.replyChoices(options).queue();
-                        }
-                        default -> {
-                            Map<String, String> agendas = Mapper.getAgendaJustNames(game);
-                            List<Command.Choice> options = agendas.entrySet().stream()
-                                .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
-                                .limit(25)
-                                .map(value -> new Command.Choice(value.getValue(), value.getKey()))
-                                .collect(Collectors.toList());
-                            event.replyChoices(options).queue();
-                        }
-                    }
-                }
             }
             case Constants.AC_ID -> {
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
@@ -355,118 +255,32 @@ public class AutoCompleteProvider {
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
-            case Constants.LEADER, Constants.LEADER_1, Constants.LEADER_2, Constants.LEADER_3, Constants.LEADER_4 -> {
-                List<String> leaderIDs = new ArrayList<>();
-                if (game == null || game.isFowMode() || Constants.LEADER_ADD.equals(event.getSubcommandName())) {
-                    leaderIDs.addAll(Mapper.getLeaders().keySet());
-                } else {
-                    leaderIDs.addAll(List.of("agent", "commander", "hero"));
-                    for (Player player_ : game.getPlayers().values()) {
-                        leaderIDs.addAll(player_.getLeaderIDs());
-                    }
-                }
-
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                List<Command.Choice> options = leaderIDs.stream()
-                    .filter(value -> value.toLowerCase().contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
-                try {
-                    event.replyChoices(options).queue();
-                } catch (Exception e) {
-                    BotLogger.log(event, "Could not suggest leaders", e);
-                }
-            }
-            case Constants.TECH, Constants.TECH2, Constants.TECH3, Constants.TECH4 -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, TechnologyModel> techs = Mapper.getTechs().entrySet().stream()
-                    .filter(entry -> game == null || game.getTechnologyDeck().contains(entry.getKey()))
-                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
-                List<Command.Choice> options = techs.entrySet().stream()
-                    .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
-                    .collect(Collectors.toList());
-                event.replyChoices(options).queue();
-            }
-            case Constants.PLANET, Constants.PLANET2, Constants.PLANET3, Constants.PLANET4, Constants.PLANET5, Constants.PLANET6 -> {
-                SlashCommandListener.setActiveGame(event.getMessageChannel(), event.getUser().getId(), event.getName(), event.getSubcommandName());
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Set<String> planetIDs;
-                Map<String, String> planets = Mapper.getPlanetRepresentations();
-                if (game != null && !game.isFowMode()) {
-                    planetIDs = game.getPlanets();
-                    List<Command.Choice> options = planets.entrySet().stream()
-                        .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
-                        .filter(value -> planetIDs.isEmpty() || planetIDs.contains(value.getKey()))
-                        .limit(25)
-                        .map(value -> new Command.Choice(
-                            value.getValue() + " (" + Helper.getPlanetResources(value.getKey(), game) + "/" + Helper.getPlanetInfluence(value.getKey(), game) + ")", value.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                } else if (game != null) {
-                    List<Command.Choice> options = planets.entrySet().stream()
-                        .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value.getValue(), value.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
             case Constants.TRAIT -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of(Constants.CULTURAL, Constants.INDUSTRIAL, Constants.HAZARDOUS, Constants.FRONTIER)
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                var values = List.of(Constants.CULTURAL, Constants.INDUSTRIAL, Constants.HAZARDOUS, Constants.FRONTIER);
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.DECAL_SET -> {
                 String enteredValue = event.getFocusedOption().getValue();
                 List<Command.Choice> options = Mapper.getDecals().stream()
                     .filter(value -> value.contains(enteredValue) || Mapper.getDecalName(value).toLowerCase().contains(enteredValue))
-                    .filter(decalID -> ChangeUnitDecal.userMayUseDecal(userID, decalID))
+                    .filter(decalID -> UnitDecalService.userMayUseDecal(event.getUser().getId(), decalID))
                     .limit(25)
                     .map(value -> new Command.Choice(Mapper.getDecalName(value), value))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
-            case Constants.TTPG_FILE_NAME -> {
-                String enteredValue = event.getFocusedOption().getValue();
-                File exportDirectory = Storage.getTTPGExportDirectory();
-                String dir = exportDirectory.getPath();
-
-                Set<String> fileSet = Stream.of(new File(dir).listFiles())
-                    .filter(file -> !file.isDirectory())
-                    .map(File::getName)
-                    .collect(Collectors.toSet());
-
-                List<Command.Choice> options = fileSet.stream()
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
-                event.replyChoices(options).queue();
-            }
             case Constants.FOG_FILTER -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("Dark Grey (default)", "Sepia", "White", "Pink", "Purple")
-                    .filter(value -> value.toLowerCase().contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                var values = List.of("Dark Grey (default)", "Sepia", "White", "Pink", "Purple");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.PRIMARY_TILE_DIRECTION -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("North", "Northeast", "Southeast", "South", "Southwest", "Northwest")
-                    .filter(value -> value.toLowerCase().contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                var values = List.of("North", "Northeast", "Southeast", "South", "Southwest", "Northwest");
+                List<Command.Choice> options =  mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.CATEGORY -> {
@@ -484,133 +298,32 @@ public class AutoCompleteProvider {
             }
             case Constants.ANON -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("y", "n")
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                List<Command.Choice> options = mapTo25ChoicesThatContain(List.of("y", "n"), enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.TEXT_SIZE -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("tiny", "small", "medium", "large")
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                var values = List.of("tiny", "small", "medium", "large");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.TECH_TYPE -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("cybernetic", "biotic", "warfare", "propulsion")
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                var values = List.of("cybernetic", "biotic", "warfare", "propulsion");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.SPECIFIC_PHASE -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("strategy", "voting", "statusScoring", "statusHomework", "action", "agendaResolve", "playerSetup", "ixthian")
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, value))
-                    .collect(Collectors.toList());
+                var phases = List.of("strategy", "voting", "statusScoring", "statusHomework", "action", "agendaResolve", "playerSetup", "ixthian");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(phases, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.CREUSS_TOKEN_NAME -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("alpha", "beta", "gamma")
-                    .filter(value -> value.contains(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value, "creuss" + value))
-                    .collect(Collectors.toList());
+                var phases = List.of("alpha", "beta", "gamma");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(phases, enteredValue);
                 event.replyChoices(options).queue();
-            }
-            case Constants.ABILITY, Constants.ABILITY_1, Constants.ABILITY_2, Constants.ABILITY_3, Constants.ABILITY_4, Constants.ABILITY_5 -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-
-                Map<String, AbilityModel> abilities = new HashMap<>();
-                try {
-                    if (player != null && subCommandName != null && subCommandName.equals(Constants.ABILITY_REMOVE)) {
-                        for (String abilityID : player.getAbilities()) {
-                            abilities.put(abilityID, Mapper.getAbilities().get(abilityID));
-                        }
-                    } else if (player != null && subCommandName != null && subCommandName.equals(Constants.ABILITY_ADD)) {
-                        abilities = Mapper.getAbilities();
-                        for (String abilityID : player.getAbilities()) {
-                            abilities.remove(abilityID);
-                        }
-                    } else {
-                        abilities = Mapper.getAbilities();
-                    }
-                } catch (Exception e) {
-                    BotLogger.log(event, "Ability Autocomplete Setup Error", e);
-                    abilities = Mapper.getAbilities();
-                }
-
-                List<Command.Choice> options = abilities.entrySet().stream()
-                    .filter(value -> value.getValue().search(enteredValue))
-                    .limit(25)
-                    .map(value -> new Command.Choice(value.getValue().getAutoCompleteName(), value.getKey()))
-                    .collect(Collectors.toList());
-                event.replyChoices(options).queue();
-
-            }
-            case Constants.LATEST_COMMAND -> {
-                if (game == null) {
-                    event.replyChoiceStrings("No Active Map for this Channel").queue();
-                    return;
-                }
-                String latestCommand;
-                if (game.isFowMode()) { //!event.getUser().getID().equals(activeMap.getGMID()); //TODO: Validate that the user running the command is the FoW GM, if so, display command.
-                    latestCommand = "Game is Fog of War mode - last command is hidden.";
-                } else {
-                    latestCommand = StringUtils.left(game.getLatestCommand(), 100);
-                }
-                event.replyChoice(latestCommand, Constants.LATEST_COMMAND).queue();
-            }
-            case Constants.UNDO_TO_BEFORE_COMMAND -> {
-                if (game == null) {
-                    event.replyChoiceStrings("No Active Map for this Channel").queue();
-                    return;
-                }
-                if (game.isFowMode()) {
-                    event.replyChoiceStrings("Game is Fog of War mode - you can't see what you are undoing.").queue();
-                }
-                long datetime = System.currentTimeMillis();
-                List<Command.Choice> options = Undo.getAllUndoSavedGames(game).entrySet().stream()
-                    .sorted(Map.Entry.<String, Game>comparingByValue(Comparator.comparing(Game::getLastModifiedDate)).reversed())
-                    .limit(25)
-                    .map(entry -> new Command.Choice(
-                        StringUtils.left(
-                            entry.getKey() + " (" + Helper.getTimeRepresentationToSeconds(datetime - entry.getValue().getLastModifiedDate()) + " ago):  " + entry.getValue().getLatestCommand(), 100),
-                        entry.getKey()))
-                    .collect(Collectors.toList());
-                event.replyChoices(options).queue();
-            }
-            case Constants.TILE_NAME, Constants.TILE_NAME_FROM, Constants.TILE_NAME_TO, Constants.HS_TILE_POSITION -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                if (game == null) {
-                    event.replyChoiceStrings("No Active Map for this Channel").queue();
-                    return;
-                }
-                if (game.isFowMode()) {
-                    List<String> positions = new ArrayList<>(game.getTileMap().keySet());
-                    List<Command.Choice> options = positions.stream()
-                        .filter(value -> value.toLowerCase().contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value, value))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                } else {
-                    List<Command.Choice> options = game.getTileNameAutocompleteOptionsCache().stream()
-                        .filter(value -> value.getKey().toLowerCase().contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value.getKey(), value.getValue()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
             }
             case Constants.DECK_NAME -> {
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
@@ -626,7 +339,7 @@ public class AutoCompleteProvider {
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
                 Map<String, DeckModel> decks = Mapper.getDecks();
                 List<Command.Choice> options = decks.values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.ACTION_CARD))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.ACTION_CARD)
                     .filter(value -> value.getAlias().contains(enteredValue))
                     .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
                     .limit(25)
@@ -635,56 +348,56 @@ public class AutoCompleteProvider {
             }
             case Constants.SO_DECK -> {
                 List<DeckModel> secretDecks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.SECRET_OBJECTIVE))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.SECRET_OBJECTIVE)
                     .toList();
                 List<Command.Choice> options = searchModels(event, secretDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.STAGE_1_PUBLIC_DECK -> {
                 List<DeckModel> public1Decks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.STAGE_1_PUBLIC))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.PUBLIC_STAGE_1_OBJECTIVE)
                     .toList();
                 List<Command.Choice> options = searchModels(event, public1Decks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.STAGE_2_PUBLIC_DECK -> {
                 List<DeckModel> public2Decks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.STAGE_2_PUBLIC))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.PUBLIC_STAGE_2_OBJECTIVE)
                     .toList();
                 List<Command.Choice> options = searchModels(event, public2Decks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.RELIC_DECK -> {
                 List<DeckModel> relicDecks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.RELIC))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.RELIC)
                     .toList();
                 List<Command.Choice> options = searchModels(event, relicDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.AGENDA_DECK -> {
                 List<DeckModel> agendaDecks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.AGENDA))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.AGENDA)
                     .toList();
                 List<Command.Choice> options = searchModels(event, agendaDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.EVENT_DECK -> {
                 List<DeckModel> eventDecks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.EVENT))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.EVENT)
                     .toList();
                 List<Command.Choice> options = searchModels(event, eventDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.EXPLORATION_DECKS -> {
                 List<DeckModel> exploreDecks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.EXPLORE))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.EXPLORE)
                     .toList();
                 List<Command.Choice> options = searchModels(event, exploreDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.TECHNOLOGY_DECK -> {
                 List<DeckModel> techDecks = Mapper.getDecks().values().stream()
-                    .filter(deckModel -> deckModel.getType().equals(Constants.TECHNOLOGY))
+                    .filter(deckModel -> deckModel.getType() == DeckModel.DeckType.TECHNOLOGY)
                     .toList();
                 List<Command.Choice> options = searchModels(event, techDecks, null);
                 event.replyChoices(options).queue();
@@ -741,12 +454,8 @@ public class AutoCompleteProvider {
             }
             case Constants.ADD_REMOVE -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<String> values = Arrays.asList("add", "remove");
-                List<Command.Choice> options = values.stream()
-                    .filter(token -> token.contains(enteredValue))
-                    .limit(25)
-                    .map(token -> new Command.Choice(token, token))
-                    .collect(Collectors.toList());
+                List<String> values = List.of("add", "remove");
+                List<Command.Choice> options = mapTo25ChoicesThatContain(values, enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.UNIT_SOURCE -> {
@@ -769,31 +478,27 @@ public class AutoCompleteProvider {
             }
             case Constants.GAME_NAME -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = GameManager.getInstance().getGameNames().stream()
-                    .filter(token -> token.contains(enteredValue))
-                    .limit(25)
-                    .map(token -> new Command.Choice(token, token))
-                    .collect(Collectors.toList());
+                List<Command.Choice> options = mapTo25ChoicesThatContain(GameManager.getGameNames(), enteredValue);
                 event.replyChoices(options).queue();
             }
             case Constants.GAME_STATISTIC -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<GameStatistics> stats = Arrays.asList(GameStatistics.values());
+                List<GameStatTypes> stats = Arrays.asList(GameStatTypes.values());
                 List<Command.Choice> options = stats.stream()
                     .filter(stat -> stat.search(enteredValue))
                     .limit(25)
-                    .sorted(Comparator.comparing(GameStatistics::getAutoCompleteName))
+                    .sorted(Comparator.comparing(GameStatTypes::getAutoCompleteName))
                     .map(stat -> new Command.Choice(stat.getAutoCompleteName(), stat.toString()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
             case Constants.PLAYER_STATISTIC -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<PlayerStats.PlayerStatistics> stats = Arrays.asList(PlayerStats.PlayerStatistics.values());
+                List<PlayerStatTypes> stats = Arrays.asList(PlayerStatTypes.values());
                 List<Command.Choice> options = stats.stream()
                     .filter(stat -> stat.search(enteredValue))
                     .limit(25)
-                    .sorted(Comparator.comparing(PlayerStats.PlayerStatistics::getAutoCompleteName))
+                    .sorted(Comparator.comparing(PlayerStatTypes::getAutoCompleteName))
                     .map(stat -> new Command.Choice(stat.getAutoCompleteName(), stat.toString()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
@@ -821,119 +526,264 @@ public class AutoCompleteProvider {
             }
             case Constants.PROMOTE_TARGET -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = ServerPromote.Servers.keySet().stream()
-                    .filter(key -> ServerPromote.Servers.get(key).toLowerCase().contains(enteredValue))
+                List<Command.Choice> options = ServerPromoteCommand.Servers.keySet().stream()
+                    .filter(key -> ServerPromoteCommand.Servers.get(key).toLowerCase().contains(enteredValue))
                     .limit(25)
-                    .map(key -> new Command.Choice(key, ServerPromote.Servers.get(key)))
+                    .map(key -> new Command.Choice(key, ServerPromoteCommand.Servers.get(key)))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
             case Constants.PROMOTE_RANK -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = ServerPromote.Servers.keySet().stream()
-                    .filter(key -> ServerPromote.Ranks.get(key).toLowerCase().contains(enteredValue))
+                List<Command.Choice> options = ServerPromoteCommand.Servers.keySet().stream()
+                    .filter(key -> ServerPromoteCommand.Ranks.get(key).toLowerCase().contains(enteredValue))
                     .limit(25)
-                    .map(key -> new Command.Choice(key, ServerPromote.Ranks.get(key)))
+                    .map(key -> new Command.Choice(key, ServerPromoteCommand.Ranks.get(key)))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
-            case ForcePick.PICK -> {
+            case "draft_pick" -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
                 String enteredValue = event.getFocusedOption().getValue();
-                if (game == null) {
-                    event.replyChoices(Collections.emptyList()).queue();
+                List<String> availablePicks = game.getMiltyDraftManager().allRemainingOptionsForActive();
+                List<Command.Choice> options = mapTo25ChoicesThatContain(availablePicks, enteredValue);
+                event.replyChoices(options).queue();
+            }
+            case Constants.RELIC -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+
+                List<String> relicDeck = Mapper.getDecks().get(game.getRelicDeckID()).getNewShuffledDeck();
+                List<String> tableRelics = new ArrayList<>(relicDeck);
+                Collections.shuffle(tableRelics);
+
+                List<Command.Choice> options = mapTo25ChoicesThatContain(tableRelics, enteredValue);
+                event.replyChoices(options).queue();
+            }
+            case Constants.LATEST_COMMAND -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                String latestCommand;
+                if (game.isFowMode()) { //!event.getUser().getID().equals(activeMap.getGMID()); //TODO: Validate that the user running the command is the FoW GM, if so, display command.
+                    latestCommand = "Game is Fog of War mode - last command is hidden.";
+                } else {
+                    latestCommand = StringUtils.left(game.getLatestCommand(), 100);
+                }
+                event.replyChoice(latestCommand, Constants.LATEST_COMMAND).queue();
+            }
+            case Constants.UNDO_TO_COMMAND -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                if (game.isFowMode() && !game.getFogOfWarGMIDs().contains(event.getUser().getId())) {
+                    event.replyChoiceStrings("Game is Fog of War mode - you can't see what you are undoing.").queue();
                     return;
                 }
-                List<String> availablePicks = game.getMiltyDraftManager().allRemainingOptionsForActive();
-                List<Command.Choice> options = availablePicks.stream()
-                    .filter(pick -> pick.toLowerCase().contains(enteredValue.toLowerCase()))
+
+                List<Command.Choice> options = GameUndoNameService.getUndoNamesToCommandText(game, 25).entrySet().stream()
+                    .sorted(Map.Entry.<String, String>comparingByValue().reversed())
                     .limit(25)
-                    .map(pick -> new Command.Choice(pick, pick))
+                    .map(entry -> new Command.Choice(StringUtils.left(entry.getValue(), 100), entry.getKey()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
+            case Constants.TILE_NAME, Constants.TILE_NAME_FROM, Constants.TILE_NAME_TO, Constants.HS_TILE_POSITION -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                if (game.isFowMode()) {
+                    var options = mapTo25ChoicesThatContain(game.getTileMap().keySet(), enteredValue);
+                    event.replyChoices(options).queue();
+                } else {
+                    List<Command.Choice> options = game.getTileNameAutocompleteOptionsCache().stream()
+                        .filter(value -> value.getKey().toLowerCase().contains(enteredValue))
+                        .limit(25)
+                        .map(value -> new Command.Choice(value.getKey(), value.getValue()))
+                        .collect(Collectors.toList());
+                    event.replyChoices(options).queue();
+                }
+            }
+            case Constants.PLANET, Constants.PLANET2, Constants.PLANET3, Constants.PLANET4, Constants.PLANET5, Constants.PLANET6 -> {
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                Map<String, String> planets = Mapper.getPlanetRepresentations();
+                ManagedGame managedGame = GameManager.getManagedGame(gameName);
+                if (managedGame != null && !managedGame.isFowMode()) {
+                    Game game = managedGame.getGame();
+                    Set<String> planetIDs = game.getPlanets();
+                    List<Command.Choice> options = planets.entrySet().stream()
+                        .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
+                        .filter(value -> planetIDs.isEmpty() || planetIDs.contains(value.getKey()))
+                        .limit(25)
+                        .map(value -> new Command.Choice(
+                            value.getValue() + " (" + Helper.getPlanetResources(value.getKey(), game) + "/" + Helper.getPlanetInfluence(value.getKey(), game) + ")", value.getKey()))
+                        .collect(Collectors.toList());
+                    event.replyChoices(options).queue();
+                } else {
+                    List<Command.Choice> options = planets.entrySet().stream()
+                        .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
+                        .limit(25)
+                        .map(value -> new Command.Choice(value.getValue(), value.getKey()))
+                        .collect(Collectors.toList());
+                    event.replyChoices(options).queue();
+                }
+            }
+            case Constants.LEADER, Constants.LEADER_1, Constants.LEADER_2, Constants.LEADER_3, Constants.LEADER_4 -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                List<String> leaderIDs = new ArrayList<>();
+                if (game.isFowMode() || Constants.LEADER_ADD.equals(event.getSubcommandName())) {
+                    leaderIDs.addAll(Mapper.getLeaders().keySet());
+                } else {
+                    leaderIDs.addAll(List.of("agent", "commander", "hero"));
+                    for (Player player_ : game.getPlayers().values()) {
+                        leaderIDs.addAll(player_.getLeaderIDs());
+                    }
+                }
+
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                List<Command.Choice> options = mapTo25ChoicesThatContain(leaderIDs, enteredValue);
+                event.replyChoices(options).queue();
+            }
+            case Constants.TECH, Constants.TECH2, Constants.TECH3, Constants.TECH4 -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                Map<String, TechnologyModel> techs = Mapper.getTechs().entrySet().stream()
+                    .filter(entry -> game != null && game.getTechnologyDeck().contains(entry.getKey()))
+                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+
+                List<Command.Choice> options = techs.entrySet().stream()
+                    .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue))
+                    .limit(25)
+                    .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
+            case Constants.FACTION_COLOR, Constants.TARGET_FACTION_OR_COLOR -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                if (game.isFowMode()) {
+                    List<String> factionColors = new ArrayList<>(Mapper.getFactionIDs());
+                    factionColors.addAll(Mapper.getColorNames());
+
+                    List<String> factionColorsRetain = new ArrayList<>();
+                    boolean privateGame = FoWHelper.isPrivateGame(game, null, event.getChannel());
+                    for (Player player_ : game.getPlayers().values()) {
+                        if (!privateGame) {
+                            factionColorsRetain.add(player_.getFaction());
+                        }
+                        factionColorsRetain.add(player_.getColor());
+                    }
+                    factionColors.retainAll(factionColorsRetain);
+                    List<Command.Choice> options = mapTo25ChoicesThatContain(factionColors, enteredValue);
+                    event.replyChoices(options).queue();
+                } else {
+                    List<Command.Choice> options = game.getPlayers().values().stream()
+                        .filter(p -> p.getAutoCompleteRepresentation().toLowerCase().contains(enteredValue))
+                        .limit(25)
+                        .map(p -> new Command.Choice(p.getAutoCompleteRepresentation(), p.getColor()))
+                        .toList();
+                    event.replyChoices(options).queue();
+                }
+            }
+            case Constants.ABILITY, Constants.ABILITY_1, Constants.ABILITY_2, Constants.ABILITY_3, Constants.ABILITY_4, Constants.ABILITY_5 -> {
+                if (!GameManager.isValid(gameName)) return;
+                Game game = GameManager.getManagedGame(gameName).getGame();
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                Map<String, AbilityModel> abilities = new HashMap<>();
+                try {
+                    Player player = CommandHelper.getPlayerFromGame(game, event.getMember(), event.getUser().getId());
+                    if (player != null && subcommandName != null && subcommandName.equals(Constants.ABILITY_REMOVE)) {
+                        for (String abilityID : player.getAbilities()) {
+                            abilities.put(abilityID, Mapper.getAbilities().get(abilityID));
+                        }
+                    } else if (player != null && subcommandName != null && subcommandName.equals(Constants.ABILITY_ADD)) {
+                        abilities = Mapper.getAbilities();
+                        for (String abilityID : player.getAbilities()) {
+                            abilities.remove(abilityID);
+                        }
+                    } else {
+                        abilities = Mapper.getAbilities();
+                    }
+                } catch (Exception e) {
+                    BotLogger.log(event, "Ability Autocomplete Setup Error", e);
+                    abilities = Mapper.getAbilities();
+                }
+
+                List<Command.Choice> options = abilities.entrySet().stream()
+                    .filter(value -> value.getValue().search(enteredValue))
+                    .limit(25)
+                    .map(value -> new Command.Choice(value.getValue().getAutoCompleteName(), value.getKey()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
         }
     }
 
-    private static void resolveActionCardAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName, Game game) {
+    private static void resolveActionCardDiscardAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                                @NotNull String optionName, @NotNull Game game) {
+        if (!optionName.equals(Constants.ACTION_CARD_ID)) return;
         switch (subCommandName) {
             case Constants.PICK_AC_FROM_DISCARD, Constants.SHUFFLE_AC_BACK_INTO_DECK -> {
-                if (optionName.equals(Constants.ACTION_CARD_ID)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    Map<String, Integer> discardActionCardIDs = game.getDiscardActionCards();
-                    List<Command.Choice> options = discardActionCardIDs.entrySet().stream()
-                        .map(entry -> Map.entry(Mapper.getActionCard(entry.getKey()), entry.getValue()))
-                        .filter(entry -> entry.getKey().getName().toLowerCase().contains(enteredValue))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(
-                            entry.getKey().getName() + " (" + entry.getValue() + ")",
-                            entry.getValue()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-        }
-    }
-
-    private static void resolveDeveloperCommandAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName) {
-        if (subCommandName.equals(Constants.SET_SETTING)) {
-            switch (optionName) {
-                case Constants.SETTING_TYPE -> event.replyChoiceStrings("string", "number", "bool").queue();
-                case Constants.SETTING_NAME -> {
-                    String enteredValue = event.getFocusedOption().getValue();
-                    List<GlobalSettings.ImplementedSettings> settings = new ArrayList<>(
-                        List.of(GlobalSettings.ImplementedSettings.values()));
-                    List<Command.Choice> options = settings.stream()
-                        .map(GlobalSettings.ImplementedSettings::toString)
-                        .filter(setting -> setting.contains(enteredValue))
-                        .limit(25)
-                        .map(setting -> new Command.Choice(setting, setting))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-        }
-    }
-
-    private static <T extends ModelInterface & EmbeddableModel> List<Command.Choice> searchModels(CommandAutoCompleteInteractionEvent event, Collection<T> models, ComponentSource source) {
-        String enteredValue = event.getFocusedOption().getValue();
-        List<Command.Choice> options = models.stream()
-            .filter(model -> model.search(enteredValue, source))
-            .limit(25)
-            .map(model -> new Command.Choice(model.getAutoCompleteName(), model.getAlias()))
-            .collect(Collectors.toList());
-        return options;
-    }
-
-    private static void resolveSearchCommandAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName) {
-        ComponentSource source = ComponentSource.fromString(event.getOption(Constants.SOURCE, null, OptionMapping::getAsString));
-
-        if (optionName.equals(Constants.SEARCH)) {
-            List<Command.Choice> options = null;
-            switch (subCommandName) {
-                case Constants.SEARCH_PLANETS -> options = searchModels(event, TileHelper.getAllPlanets().values(), source);
-                case Constants.SEARCH_TILES -> options = searchModels(event, TileHelper.getAllTiles().values(), source);
-                case Constants.SEARCH_FACTIONS -> options = searchModels(event, Mapper.getFactions(), source);
-                case Constants.SEARCH_LEADERS -> options = searchModels(event, Mapper.getLeaders().values(), source);
-                case Constants.SEARCH_UNITS -> options = searchModels(event, Mapper.getUnits().values(), source);
-                case Constants.SEARCH_TECHS -> options = searchModels(event, Mapper.getTechs().values(), source);
-                case Constants.SEARCH_ABILITIES -> options = searchModels(event, Mapper.getAbilities().values(), source);
-                case Constants.SEARCH_EXPLORES -> options = searchModels(event, Mapper.getExplores().values(), source);
-                case Constants.SEARCH_RELICS -> options = searchModels(event, Mapper.getRelics().values(), source);
-                case Constants.SEARCH_AGENDAS -> options = searchModels(event, Mapper.getAgendas().values(), source);
-                case Constants.SEARCH_EVENTS -> options = searchModels(event, Mapper.getEvents().values(), source);
-                case Constants.SEARCH_ACTION_CARDS -> options = searchModels(event, Mapper.getActionCards().values(), source);
-                case Constants.SEARCH_SECRET_OBJECTIVES -> options = searchModels(event, Mapper.getSecretObjectives().values(), source);
-                case Constants.SEARCH_PUBLIC_OBJECTIVES -> options = searchModels(event, Mapper.getPublicObjectives().values(), source);
-                case Constants.SEARCH_PROMISSORY_NOTES -> options = searchModels(event, Mapper.getPromissoryNotes().values(), source);
-                case Constants.SEARCH_DECKS -> options = searchModels(event, Mapper.getDecks().values(), source);
-            }
-            if (options != null) {
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                Map<String, Integer> discardActionCardIDs = game.getDiscardActionCards();
+                List<Command.Choice> options = discardActionCardIDs.entrySet().stream()
+                    .map(entry -> Map.entry(Mapper.getActionCard(entry.getKey()), entry.getValue()))
+                    .filter(entry -> entry.getKey().getName().toLowerCase().contains(enteredValue))
+                    .limit(25)
+                    .map(entry -> new Command.Choice(
+                        entry.getKey().getName() + " (" + entry.getValue() + ")",
+                        entry.getValue()))
+                    .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
         }
     }
 
-    private static void resolveFrankenAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName, Game game) {
+    private static void resolveDeveloperCommandAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                            @NotNull String optionName) {
+        if (!subCommandName.equals(Constants.SET_SETTING)) return;
+        switch (optionName) {
+            case Constants.SETTING_TYPE -> event.replyChoiceStrings("string", "number", "bool").queue();
+            case Constants.SETTING_NAME -> {
+                var settings = Arrays.stream(GlobalSettings.ImplementedSettings.values())
+                    .map(GlobalSettings.ImplementedSettings::toString)
+                    .toList();
+                replyWith25ChoicesThatContainValue(event, settings);
+            }
+        }
+    }
+
+    private static void resolveSearchCommandAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                            @NotNull String optionName) {
+        if (!optionName.equals(Constants.SEARCH)) return;
+        ComponentSource source = ComponentSource.fromString(event.getOption(Constants.SOURCE, null, OptionMapping::getAsString));
+        List<Command.Choice> options = null;
+        switch (subCommandName) {
+            case Constants.SEARCH_PLANETS -> options = searchModels(event, TileHelper.getAllPlanetModels(), source);
+            case Constants.SEARCH_TILES -> options = searchModels(event, TileHelper.getAllTileModels(), source);
+            case Constants.SEARCH_FACTIONS -> options = searchModels(event, Mapper.getFactions(), source);
+            case Constants.SEARCH_LEADERS -> options = searchModels(event, Mapper.getLeaders().values(), source);
+            case Constants.SEARCH_UNITS -> options = searchModels(event, Mapper.getUnits().values(), source);
+            case Constants.SEARCH_TECHS -> options = searchModels(event, Mapper.getTechs().values(), source);
+            case Constants.SEARCH_ABILITIES -> options = searchModels(event, Mapper.getAbilities().values(), source);
+            case Constants.SEARCH_EXPLORES -> options = searchModels(event, Mapper.getExplores().values(), source);
+            case Constants.SEARCH_RELICS -> options = searchModels(event, Mapper.getRelics().values(), source);
+            case Constants.SEARCH_AGENDAS -> options = searchModels(event, Mapper.getAgendas().values(), source);
+            case Constants.SEARCH_EVENTS -> options = searchModels(event, Mapper.getEvents().values(), source);
+            case Constants.SEARCH_ACTION_CARDS -> options = searchModels(event, Mapper.getActionCards().values(), source);
+            case Constants.SEARCH_SECRET_OBJECTIVES -> options = searchModels(event, Mapper.getSecretObjectives().values(), source);
+            case Constants.SEARCH_PUBLIC_OBJECTIVES -> options = searchModels(event, Mapper.getPublicObjectives().values(), source);
+            case Constants.SEARCH_PROMISSORY_NOTES -> options = searchModels(event, Mapper.getPromissoryNotes().values(), source);
+            case Constants.SEARCH_DECKS -> options = searchModels(event, Mapper.getDecks().values(), source);
+        }
+        event.replyChoices(Objects.requireNonNullElse(options, Collections.emptyList())).queue();
+    }
+
+    private static void resolveFrankenAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                    @NotNull String optionName) {
         switch (subCommandName) {
             case Constants.FACTION_TECH_ADD, Constants.FACTION_TECH_REMOVE -> {
                 switch (optionName) {
@@ -960,96 +810,178 @@ public class AutoCompleteProvider {
         }
     }
 
-    private static void resolveMapAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName, Game game) {
-        if (game == null) {
-            event.replyChoiceStrings("No Active Map for this Channel").queue();
-            return;
-        }
-
+    private static void resolveMapAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                @NotNull String optionName, @NotNull Game game) {
         switch (subCommandName) {
             case Constants.ADD_TILE -> {
-                if (optionName.equals(Constants.TILE_NAME)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = TileHelper.getAllTiles().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                    // case Constants.POSITION -> {
-                    //     String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    //     List<Command.Choice> options = game.getTileMap().entrySet().stream()
-                    //         .filter(entry -> entry.getValue().search(enteredValue))
-                    //         .limit(25)
-                    //         .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                    //         .collect(Collectors.toList());
-                    //     event.replyChoices(options).queue();
-                    // }
-                }
+                if (!optionName.equals(Constants.TILE_NAME)) return;
+                var options = searchModels(event, TileHelper.getAllTileModels(), null);
+                event.replyChoices(options).queue();
             }
             case Constants.REMOVE_TILE -> {
-                switch (optionName) {
-                    case Constants.POSITION -> {
-                        String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                        List<Command.Choice> options = game.getTileMap().entrySet().stream()
-                            .filter(entry -> entry.getValue().search(enteredValue))
-                            .limit(25)
-                            .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                            .collect(Collectors.toList());
-                        event.replyChoices(options).queue();
-                    }
-                }
+                if (!optionName.equals(Constants.POSITION)) return;
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                List<Command.Choice> options = game.getTileMap().entrySet().stream()
+                    .filter(entry -> entry.getValue().search(enteredValue))
+                    .limit(25)
+                    .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
             }
             case Constants.PRESET -> {
-                if (optionName.equals(Constants.MAP_TEMPLATE)) {
-                    System.out.println("Found autocomplete");
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-
-                    List<Command.Choice> options = Preset.templates.stream()
-                        .filter(value -> value.contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value, value))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
+                if (!optionName.equals(Constants.MAP_TEMPLATE)) return;
+                String enteredValue = event.getFocusedOption().getValue();
+                List<Command.Choice> options = mapTo25ChoicesThatContain(MapPresetService.templates, enteredValue);
+                event.replyChoices(options).queue();
             }
         }
     }
 
-    private static void resolveEventAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName, Game game, Player player) {
-        if (subCommandName.equals(Constants.EVENT_PLAY)) {
-            if (optionName.equals(Constants.EVENT_ID)) {
+    private static void resolveEventAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName, Game game) {
+        if (!subCommandName.equals(Constants.EVENT_PLAY)) return;
+        if (!optionName.equals(Constants.EVENT_ID)) return;
+        Player player = CommandHelper.getPlayerFromGame(game, event.getMember(), event.getUser().getId());
+        String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+        Map<String, Integer> techs = new HashMap<>(player.getEvents());
+        List<Command.Choice> options = techs.entrySet().stream()
+            .filter(entry -> entry.getKey().contains(enteredValue))
+            .limit(25)
+            .map(entry -> new Command.Choice(entry.getValue() + " " + entry.getKey(), entry.getValue()))
+            .collect(Collectors.toList());
+        event.replyChoices(options).queue();
+    }
+
+    private static void resolveExploreAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                    @NotNull String optionName, @NotNull Game game) {
+        if (!subCommandName.equals(Constants.USE)) return;
+        if (!optionName.equals(Constants.EXPLORE_CARD_ID)) return;
+        if (game.isFowMode()) {
+            event.replyChoice("You can not see the autocomplete in Fog of War", "[error]").queue();
+            return;
+        }
+        String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+        List<String> explores = game.getAllExplores();
+        List<Command.Choice> options = explores.stream()
+            .map(Mapper::getExplore)
+            .filter(e -> e.search(enteredValue))
+            .limit(25)
+            .sorted(Comparator.comparing(ExploreModel::getAutoCompleteName))
+            .map(e -> new Command.Choice(e.getAutoCompleteName(), e.getId()))
+            .collect(Collectors.toList());
+        event.replyChoices(options).queue();
+    }
+
+    private static void resolveStatusAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                    @NotNull String optionName, @NotNull Game game) {
+        if (!subCommandName.equals(Constants.SHUFFLE_OBJECTIVE_BACK) &&
+            !subCommandName.equals(Constants.SCORE_OBJECTIVE) &&
+            !subCommandName.equals(Constants.UNSCORE_OBJECTIVE)) {
+            return;
+        }
+        if (!optionName.equals(Constants.PO_ID)) {
+            return;
+        }
+        String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+        List<Command.Choice> options = game.getRevealedPublicObjectives().entrySet().stream()
+            .filter(entry -> (entry.getValue() + entry.getKey()).toLowerCase().contains(enteredValue))
+            .sorted(Map.Entry.comparingByValue())
+            .limit(25)
+            .map(e -> new Command.Choice(e.getValue() + " - " + e.getKey(), e.getValue()))
+            .collect(Collectors.toList());
+        event.replyChoices(options).queue();
+    }
+
+    private static void resolveAgendaAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                    @NotNull String optionName, @NotNull Game game) {
+        if (!Constants.AGENDA_ID.equals(optionName)) {
+            return;
+        }
+        switch (subCommandName) {
+            case Constants.ADD_LAW, Constants.PUT_DISCARD_BACK_INTO_DECK -> { // Agendas in Discard
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, Integer> techs = new HashMap<>(player.getEvents());
-                List<Command.Choice> options = techs.entrySet().stream()
-                    .filter(entry -> entry.getKey().contains(enteredValue))
+                List<Command.Choice> options = game.getDiscardAgendas().entrySet().stream()
+                    .filter(entry -> (entry.getValue() + entry.getKey()).toLowerCase().contains(enteredValue))
+                    .sorted(Map.Entry.comparingByKey())
                     .limit(25)
-                    .map(entry -> new Command.Choice(entry.getValue() + " " + entry.getKey(), entry.getValue()))
+                    .map(e -> new Command.Choice(e.getValue() + " - " + Mapper.getAgenda(e.getKey()).getAutoCompleteName(), e.getValue()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
+            case Constants.REVISE_LAW, Constants.ADD_CONTROL_TOKEN, Constants.REMOVE_LAW -> { // Agendas In Play
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                List<Command.Choice> options = game.getLaws().entrySet().stream()
+                    .filter(entry -> (entry.getValue() + entry.getKey()).toLowerCase().contains(enteredValue))
+                    .sorted(Map.Entry.comparingByKey())
+                    .limit(25)
+                    .map(e -> new Command.Choice(e.getValue() + " - " + Mapper.getAgenda(e.getKey()).getAutoCompleteName(), e.getValue()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
         }
     }
 
-    private static void resolveExploreAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName, Game game) {
-        if (subCommandName.equals(Constants.USE)) {
-            if (optionName.equals(Constants.EXPLORE_CARD_ID)) {
-                if (game.isFowMode()) {
-                    event.replyChoice("You can not see the autocomplete in Fog of War", "[error]").queue();
-                    return;
-                }
-
+    private static void resolveSecretObjectiveAutoComplete(@NotNull CommandAutoCompleteInteractionEvent event, @NotNull String subCommandName,
+                                                            @NotNull String optionName, @NotNull Game game) {
+        if (!Constants.SECRET_OBJECTIVE_ID.equals(optionName) && !Constants.SO_ID.equals(optionName)) return;
+        Player player = CommandHelper.getPlayerFromGame(game, event.getMember(), event.getUser().getId());
+        if (player == null) return;
+        switch (subCommandName) {
+            case Constants.UNSCORE_SO -> { // Scored, safe to show Name/ID
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                List<String> explores = game.getAllExplores();
-                List<Command.Choice> options = explores.stream()
-                    .map(Mapper::getExplore)
-                    .filter(e -> e.search(enteredValue))
+                List<Command.Choice> options = player.getSecretsScored().entrySet().stream()
+                    .filter(entry -> (entry.getValue() + entry.getKey()).toLowerCase().contains(enteredValue))
+                    .sorted(Map.Entry.comparingByKey())
                     .limit(25)
-                    .sorted(Comparator.comparing(ExploreModel::getAutoCompleteName))
-                    .map(e -> new Command.Choice(e.getAutoCompleteName(), e.getId()))
+                    .map(e -> new Command.Choice(e.getValue() + " - " + Mapper.getSecretObjective(e.getKey()).getAutoCompleteName(), e.getValue()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
+            case Constants.SCORE_SO, Constants.DISCARD_SO, Constants.SHOW_SO, Constants.SHOW_TO_ALL -> { // In hand, not safe to show Name/ID
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                List<Command.Choice> options = player.getSecretsUnscored().entrySet().stream()
+                    .filter(entry -> (entry.getValue() + entry.getKey()).toLowerCase().contains(enteredValue))
+                    .sorted(Map.Entry.comparingByValue())
+                    .limit(25)
+                    .map(e -> new Command.Choice(e.getValue() + "", e.getValue()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
+            case Constants.DRAW_SPECIFIC_SO -> {
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                DeckModel soDeck = Mapper.getDeck(player.getGame().getSoDeckID());
+                List<SecretObjectiveModel> possibleSecretObjectives = soDeck.getNewDeck().stream().map(Mapper::getSecretObjective).toList();
+                List<Command.Choice> options = possibleSecretObjectives.stream()
+                    .filter(soModel -> soModel.search(enteredValue))
+                    .sorted(Comparator.comparing(SecretObjectiveModel::getName))
+                    .limit(25)
+                    .map(soModel -> new Command.Choice(soModel.getAutoCompleteName(), soModel.getAlias()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
         }
+    }
+
+    private static <T extends ModelInterface & EmbeddableModel> List<Command.Choice> searchModels(CommandAutoCompleteInteractionEvent event, Collection<T> models, ComponentSource source) {
+        String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+        return models.stream()
+            .filter(model -> model.search(enteredValue, source))
+            .limit(25)
+            .map(model -> new Command.Choice(model.getAutoCompleteName(), model.getAlias()))
+            .toList();
+    }
+
+    private static void replyWith25ChoicesThatContainValue(CommandAutoCompleteInteractionEvent event, Collection<String> toFilter) {
+        String enteredValue = event.getFocusedOption().getValue();
+        var options = mapTo25ChoicesThatContain(toFilter, enteredValue);
+        event.replyChoices(options).queue();
+    }
+
+    private static List<Command.Choice> mapTo25ChoicesThatContain(Collection<String> toFilter, String toContain) {
+        return toFilter.stream()
+            .filter(string -> string.toLowerCase().contains(toContain.toLowerCase()))
+            .sorted()
+            .limit(25)
+            .map(string -> new Command.Choice(string, string))
+            .toList();
     }
 }
